Started reading through and editing modelling chapter

--- a/frontmatter/uittreksel.tex
+++ b/frontmatter/uittreksel.tex
@@ -2,4 +2,6 @@
 % \addcontentsline{toc}{chapter}{Uittreksel}
 \makeatletter\@mkboth{}{Uittreksel}\makeatother
 
+% ?? translate into Afrikaans abstract
+
 \glsresetall
