--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -8,7 +8,7 @@
 \chapter{Literature study} \label{chap:lit_study}
 
     \paragraph
-    This chapter will present a study of the literature regarding the transportation of payloads with multirotors.
+    This chapter will present a study of the literature regarding payload transportation with multirotors.
     Firstly, an overview of different payload configurations and control techniques for payload transportation will be discussed.
     Thereafter, the study will focus on control techniques that consider suspended payloads.
     A summary will be provided of different swing damping controllers proposed for the multirotor-payload system and a few literature trends will be highlighted.
