--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -203,7 +203,7 @@
 \renewcommand{\listtablename}{List of tables}
 \listoftables
 
-\input{frontmatter/symbols}
+% \input{frontmatter/symbols}
 \printglossary[type=\acronymtype, title={Abbreviations}, style=super]
 \label{sec:abbrev}
 
