--- a/control/diagrams/angular_rate_controller.tex
+++ b/control/diagrams/angular_rate_controller.tex
@@ -88,7 +88,7 @@
     
     \end{tikzpicture}
 
-    \caption{Angular rate controller diagram \cite{PX4_controller_diagrams}}
+    \caption{Angular rate controller diagram \cite{PX4userguide}}
     \label{fig:angular_rate_controller}
   
   \end{figure}
