--- a/control/pid.tex
+++ b/control/pid.tex
@@ -4,7 +4,7 @@
     % This section gives a brief overview of the \gls{PID} control architecture design process used in this work.
     % The \gls{PID} controllers will be designed based on a linearized model of the multirotor without a payload.
     % The design process used to determine the controller gains will also be discussed in this section.
-    % Finally the controllers will be implemented with MATLAB and Simulink and are verified with practical flight data.
+    % Finally the controllers will be implemented with MATLAB and Simulink\texttrademark~and are verified with practical flight data.
     \gls{PID} control is a popular linear control technique that applies a control signal proportional to the error signal, 
     the integral of the error signal, 
     and the derivative of the error signal.
