--- a/control/simulation_environment.tex
+++ b/control/simulation_environment.tex
@@ -1,15 +1,15 @@
 \FloatBarrier\section{Simulation Environment} \label{sec:simulation_environment}
 
     \paragraph
-    The controllers in this chapter are tested within a MATLAB/Simulink simulation environment.
+    The controllers in this chapter are tested within a Simulink\texttrademark~simulation environment.
     This is used rather than the SITL and Gazebo simulation environment because it allows us to iterate designs faster.
-    Simulink provides a graphical interface for control system design which enables us to change the control system design with ease.
+    Simulink\texttrademark~provides a graphical interface for control system design which enables us to change the control system design with ease.
     In contrast, the SITL and Gazebo simulation environment requires text-based control laws with C\texttt{++} and requires \gls{ROS} nodes to interface an \gls{MPC} with PX4.
     This requires a lot more development time for control system design than the graphical tools in Simulink.
     The SITL and Gazebo simulation also has a longer runtime per simulation, which further adds to the development time of the iterative control system design process.
     
     \paragraph
-    The multirotor and suspended payload system is modelled in Simulink with the differential equations derived in Chapter~\ref{chap:modelling}.
+    The multirotor and suspended payload system is modelled in Simulink\texttrademark~with the differential equations derived in Chapter~\ref{chap:modelling}.
     The resulting controllers are also applied in Simulink.
     Using the cascade \gls{PID} control architecture (discussed in the sections below), this simulation environment was verified against practical data with and without a payload.
     The plots in 
