--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -271,7 +271,7 @@ Finally, practical flight data will be used to verify the simulated mathematical
     \end{equation}
 
     \paragraph
-    % Starting at a specified initial condition, Equation~\ref{eq:forces} and Equation~\ref{eq:body_rates} can now be solved with an \gls{ODE} solver in a simulation environment like Simulink to describe the motion of the multirotor.
+    % Starting at a specified initial condition, Equation~\ref{eq:forces} and Equation~\ref{eq:body_rates} can now be solved with an \gls{ODE} solver in a simulation environment like Simulink\texttrademark~to describe the motion of the multirotor.
  
 \FloatBarrier\section{Forces and moments}
 
