Added registered mark to MATLAB

--- a/control/mpc.tex
+++ b/control/mpc.tex
@@ -151,7 +151,7 @@
         A specific algorithm needs to be selected or designed to implement \gls{MPC} in this work.
         There are numerous open-source methods available for this purpose.
         An extensive list of options is provided in the survey by \cite{Nguyen2020} and the most promising ones are summarised here.
-        A custom \gls{MPC} implementation can be developed in MATLAB or C\texttt{++} 
+        A custom \gls{MPC} implementation can be developed in MATLAB\textsuperscript{\textregistered} or C\texttt{++} 
         with the aid of software packages like 
         CVXGEN \cite{Mattingley2012}, 
         ACADO \cite{Houska2011},
