--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -556,7 +556,7 @@ Finally, practical flight data will be used to verify the simulated mathematical
         $p_j$ is an element in $\bm{p}$,
         $Q_j$ is the corresponding element in $\bm{Q}$,  and
         $j = \{1,~2,~3,~4,~5\}$.
-        This set of coupled equations was solved with the Symbolic Maths Toolbox\texttrademark~\cite{SymbolicToolbox2021} in MATLAB to determine the payload equations of motion. 
+        This set of coupled equations was solved with the Symbolic Maths Toolbox\texttrademark~\cite{SymbolicToolbox2021} in MATLAB\textsuperscript{\textregistered} to determine the payload equations of motion. 
         This yields a set of \glspl{ODE} in the form,
         \begin{equation} \label{eq:payload_odes}
             \ddot{\bm{p}} = f( \dot{\bm{p}}, \bm{p}, \ddot{\bm{r}}_Q, \dot{\bm{r}}_Q) ,
@@ -564,7 +564,7 @@ Finally, practical flight data will be used to verify the simulated mathematical
         which describes the motion of the payload as a function of the motion of the multirotor \gls{CoM} in the inertial frame.
 
         % ?? Maybe add odes in appendix
-        % ?? Check in MATLAb if dot{r_Q} really in dynamics
+        % ?? Check in MATLAB\textsuperscript{\textregistered} if dot{r_Q} really in dynamics
         % ?? Discuss weak link between altitude dynamics and swing angle
 
     \FloatBarrier\subsection{Payload forces acting on the multirotor}
