--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -6,7 +6,7 @@
 \label{chap:system_id}
 
 % ?? Do i explain SITL + Gazebo anywhere?
-% ?? And clear difference to MATLAb and Simulink??
+% ?? And clear difference to MATLAB\textsuperscript{\textregistered} and Simulink??
 
     \paragraph
     System identification is the process of creating a mathematical model of a dynamical system 
